# tensor_behavioral_pattern_mining

./: .gitignore  LICENSE  config.yaml  pyproject.toml
docs/: methodology.md
notebooks/: montecarlo_metrics.pkl  p0_analysis.ipynb  p1_building_tensors.ipynb  p2_mathematical_embedding.ipynb  p2_mathematical_embedding_TruncateSVD.ipynb  p3_K_selection.ipynb  p4_clustering.ipynb
src/utils/: config.py
